# paper_implementations

./: .gitignore  README.md  pyproject.toml
elevators/: elevators.model  elevators.optm
src/kans/: ekan.py
viashap_paper/: README.md  via_shap_brainstorm.ipynb
viashap_paper/notebooks/: 20250606_test_samplers.ipynb
viashap_paper/src/models/: base_models.py
viashap_paper/src/samplers/: base_sampler.py  kernel_shap_sampler.py  uniform_sampler.py
viashap_paper/src/utils/: pytorch_generators.py
viashap_paper/tests/: README.md  conftest.py
viashap_paper/tests/test_samplers/: test_kernel_shap_sampler.py  test_uniform_sampler.py
