[project]
name = "paper-implementations"
version = "0.1.0"
description = "Dependency management for my paper implementations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "shap>=0.47.2",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]
